# semicontinuous_models

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
benches/: mtp_linear_algebra.rs  mtp_rng_kernels.rs  two_part_bootstrap.rs
examples/: README.md  compare_models.rs  mtp.rs  mtp_recovery.rs  selection.rs  tweedie.rs  two_part.rs
src/: lib.rs  preprocess.rs
src/inference/: mod.rs
src/input/: counterfactual.rs  longitudinal.rs  mod.rs
src/models/: comparison.rs  lognormal.rs  matrix_ops.rs  mod.rs  selection.rs  tweedie.rs  two_part.rs
src/models/mtp/: diagnostics.rs  effects.rs  input.rs  likelihood.rs  mod.rs  posterior.rs  priors.rs  sampler.rs  types.rs
src/models/mtp/sampler/: chain.rs  context.rs  math.rs  updates.rs
src/utils/: mod.rs
tests/: mtp_robustness.rs  mtp_workflow.rs  weighted_tweedie.rs
