[package]
name = "semicontinuous_models"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Tobias Kragholm"]
description = "Reusable models for semi-continuous outcomes (two-part, Tweedie, and log-normal)"
readme = "README.md"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/semicontinuous_models"
keywords = ["glm", "two-part", "tweedie", "lognormal", "statistics"]
categories = ["science", "mathematics", "algorithms"]
exclude = ["target/", ".DS_Store"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
crate-type = ["lib"]

[dependencies]
thiserror = "2.0"
faer = "0.24"
rand = "0.10"
statrs = "0.18"
num-traits = "0.2"
comfy-table = "7.2"

[dev-dependencies]
approx = "0.5"
